fix menu button not showing issue

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,15 @@ td > img {
     cursor: pointer;
 }
 
+.status-menu-btn {
+    all: unset;
+    border-radius: 20px;
+    padding: .5rem 1rem;
+    color: white;
+    transition: .2s;
+    cursor: pointer;
+}
+
 .planned {
     background-color: var(--color-background);
     border: 3px solid var(--color-background);
@@ -102,7 +111,7 @@ td > img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -127,8 +136,7 @@ td > img {
 }
 
 .status-menu-btn {
-    all: unset;
-    border-radius: 20px;
+    border-radius: 30px;
     padding: .5rem 1rem;
     color: white;
     transition: .2s;
